// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UniformType> get get should be successfull 1`] = `
{
  "acronym": "AA",
  "defaultSizelist": {
    "name": "Liste1",
  },
  "issuedDefault": 3,
  "name": "Typ1",
  "sortOrder": 0,
  "uniformGenerationList": [
    {
      "name": "Generation1-1",
      "outdated": true,
      "sizelist": {
        "name": "Liste1",
      },
      "sortOrder": 0,
    },
    {
      "name": "Generation1-2",
      "outdated": false,
      "sizelist": {
        "name": "Liste1",
      },
      "sortOrder": 1,
    },
    {
      "name": "Generation1-3",
      "outdated": false,
      "sizelist": {
        "name": "Liste2",
      },
      "sortOrder": 2,
    },
    {
      "name": "Generation1-4",
      "outdated": false,
      "sizelist": {
        "name": "Liste3",
      },
      "sortOrder": 3,
    },
  ],
  "usingGenerations": true,
  "usingSizes": true,
}
`;

exports[`<UniformType> get getList 1`] = `
[
  {
    "acronym": "AA",
    "defaultSizelist": {
      "name": "Liste1",
    },
    "issuedDefault": 3,
    "name": "Typ1",
    "sortOrder": 0,
    "uniformGenerationList": [
      {
        "name": "Generation1-1",
        "outdated": true,
        "sizelist": {
          "name": "Liste1",
        },
        "sortOrder": 0,
      },
      {
        "name": "Generation1-2",
        "outdated": false,
        "sizelist": {
          "name": "Liste1",
        },
        "sortOrder": 1,
      },
      {
        "name": "Generation1-3",
        "outdated": false,
        "sizelist": {
          "name": "Liste2",
        },
        "sortOrder": 2,
      },
      {
        "name": "Generation1-4",
        "outdated": false,
        "sizelist": {
          "name": "Liste3",
        },
        "sortOrder": 3,
      },
    ],
    "usingGenerations": true,
    "usingSizes": true,
  },
  {
    "acronym": "AB",
    "defaultSizelist": null,
    "issuedDefault": 1,
    "name": "Typ2",
    "sortOrder": 1,
    "uniformGenerationList": [
      {
        "name": "Generation2-1",
        "outdated": true,
        "sizelist": null,
        "sortOrder": 0,
      },
      {
        "name": "Generation2-2",
        "outdated": false,
        "sizelist": null,
        "sortOrder": 1,
      },
    ],
    "usingGenerations": true,
    "usingSizes": false,
  },
  {
    "acronym": "AC",
    "defaultSizelist": {
      "name": "Liste2",
    },
    "issuedDefault": 1,
    "name": "Typ3",
    "sortOrder": 2,
    "uniformGenerationList": [],
    "usingGenerations": false,
    "usingSizes": true,
  },
  {
    "acronym": "AD",
    "defaultSizelist": null,
    "issuedDefault": 1,
    "name": "Typ4",
    "sortOrder": 3,
    "uniformGenerationList": [],
    "usingGenerations": false,
    "usingSizes": false,
  },
]
`;
